--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "redux-firestore": "^0.8.0",
     "redux-multi": "^0.1.12",
     "redux-promise": "^0.6.0",
-    "redux-thunk": "^2.3.0"
-  },
-  "devDependencies": {
+    "redux-thunk": "^2.3.0",
     "@brainhubeu/react-file-input": "^0.7.2",
     "@material-ui/core": "^3.9.3",
     "axios": "^0.18.0",
